# ichatbio-globi-agent

./: Dockerfile  README.md  pyproject.toml
src/: agent.py  schema.py  util.py
tests/: test_agent.py  test_schema.py  test_util.py
tests/resources/: naja_naja_eaten_by.csv
